--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,23 @@
   <h1>Cooking By Myself</h1>
   <p>Welcome to my cookbook. These are recipes I like.</p>
   {% for id, name in template_recipes.items() %}
-    <p><a href="/recipe/{{ id }}">{{ name }}</a></p>
+    <p><a href={{ url_for('recipe', id=id) }}>{{ name }}</a></p>
   {% endfor %}
+
+  <form action="/" method="POST">
+    {{ template_form.hidden_tag() }}
+    <p>{{ template_form.recipe.label }}
+    {{ template_form.recipe() }}</p>
+    <tr>{% for btn in template_form.recipe_type %}
+      <td>{{ btn }}</td>
+      <td>{{ btn.label }}</td>
+    {% endfor %}</tr>
+    <p>{{ template_form.description.label }}
+    {{ template_form.description() }}</p>
+    <p>{{ template_form.ingredients.label }}
+    {{ template_form.ingredients() }}</p>
+    <p>{{ template_form.instructions.label }}
+    {{ template_form.instructions() }}</p>
+    <p>{{ template_form.submit() }}</p>
+  </form>
 {% endblock %}
